--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       </div>
 
       <div id="lists">
-        <div class="itemWrap">
+        <!-- <div class="itemWrap">
           <div class="item">
             <button class="doneBtn fas fa-check"></button>
             <div class="todoTitle">
               Sample
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
   </body>
