create default message

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <input id="todo" type="text" placeholder="" />
       </div>
 
+      <div id="msgArea">
+        <div id="defaultMsg">
+          Let's Register Todo <i class="fas fa-child"></i>
+        </div>
+      </div>
+
       <div id="lists">
         <!-- <div class="itemWrap">
           <div class="item">
