--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <div id="register">
         <!-- <input id="regBtn" type="button" value="Todoを追加" /> -->
         <button id="regBtn" class="fas fa-plus"></button>
-        <input id="todo" type="text" placeholder="" />
+        <input id="todo" type="text" maxlength="15" />
+        <textarea name="comment" id="comment" cols="30" rows="5"></textarea>
       </div>
 
       <div id="msgArea">
